<resources>
    <string name="app_name">VideoApplication</string>
    <string name="search">Search…</string>
    <string name="video_info">%1$d %2$s</string>
    <string name="internet_connection">Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="no_results_found_for_your_search">No Results found for your search</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="description">Description</string>
    <string name="likes">Likes</string>
    <string name="views">Views</string>
    <string name="comments">Comments</string>
    <string name="learn_more">Learn more</string>
</resources>