<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_white"
    tools:context=".ui.feature_get_video.VideoActivity">

    <com.google.android.exoplayer2.ui.PlayerView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/player_view"
        app:layout_constraintTop_toTopOf="parent"
        app:resize_mode="fit"
        app:hide_on_touch="true"
        app:show_timeout="5000"
        app:auto_show="true"
        app:surface_type="surface_view"
        app:use_controller="true"
        android:background="@android:color/background_dark"
        app:controller_layout_id="@layout/layout_custom_controller"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/video_image"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher_background"
        android:scaleType="centerCrop"/>

    <ProgressBar
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/player_view"
        android:indeterminateTint="@color/light_white"
        android:id="@+id/progress_bar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        tools:text="Heowllkfa;iofa"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/text_white"
        app:layout_constraintBottom_toBottomOf="@id/player_view"
        android:id="@+id/text_error"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/player_view"
        android:id="@+id/description_layout"
        android:background="@drawable/bg_description">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_grey"
                android:text="@string/description"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:layout_marginStart="10dp"
                android:id="@+id/description_title"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="10dp"
                android:id="@+id/divider"
                android:background="@color/light_dark_grey"
                android:layout_below="@id/description_title"/>

            <TextView
                android:id="@+id/video_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/description"
                android:textColor="@color/dark_grey"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_section"
                android:orientation="horizontal"
                android:layout_below="@id/video_title"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/user_image"
                    app:riv_oval="true"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/ic_launcher_background"/>

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/dark_grey"
                    tools:text="Hi Tech"
                    android:layout_marginStart="10dp"
                    android:textSize="17sp"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

            <include layout="@layout/layout_video_details"
                android:id="@+id/video_details_section"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="10dp"
                android:id="@+id/section_divider"
                android:background="@color/light_dark_grey"
                android:layout_below="@id/video_details_section"/>

            <TextView
                android:id="@+id/learn_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/dark_grey"
                android:text="@string/learn_more"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textSize="17sp"
                android:layout_below="@id/section_divider"/>

            <TextView
                android:id="@+id/page_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/bright_blue"
                tools:text="@string/learn_more"
                android:layout_marginStart="10dp"
                android:textSize="17sp"
                android:layout_below="@id/learn_more"/>

            <TextView
                android:id="@+id/user_link_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/dark_grey"
                tools:text="Visit Froy"
                android:layout_marginStart="10dp"
                android:textSize="17sp"
                android:layout_below="@id/page_link"/>

            <TextView
                android:id="@+id/user_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/bright_blue"
                tools:text="@string/learn_more"
                android:layout_marginStart="10dp"
                android:textSize="17sp"
                android:layout_below="@id/user_link_details"/>

            <TextView
                android:id="@+id/tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/bright_blue_50"
                tools:text="@string/learn_more"
                android:layout_marginStart="10dp"
                android:textSize="17sp"
                android:layout_below="@id/user_link"/>

        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>